# molecular-dynamics-simulation

./: .gitignore  README.md
code/: CMakeLists.txt  main_parallel.cpp  main_serial.cpp  parallel_sim.job
code/cmake/: Eigen3.cmake
code/header/: atoms.h  bThermostat.h  kineticAndTemp.h  lj.h  ljDS.h  milestones_parallel.h  milestones_serial.h  verlet.h
code/src/: bThermostat.cpp  domain.cpp  gupta.cpp  kineticAndTemp.cpp  lj.cpp  ljDS.cpp  milestones_parallel.cpp  milestones_serial.cpp  neighbors.cpp  verlet.cpp  xyz.cpp
code/tests/: CMakeLists.txt  test_bThermostat.cpp  test_gupta.cpp  test_ljDS.cpp  test_neighbors.cpp  test_verlet.cpp
data/: gen_cluster  generate_cube.py  make_whisker.py
data/clusters/: cluster_2.885_10.xyz  cluster_2.885_11.xyz  cluster_2.885_12.xyz  cluster_2.885_13.xyz  cluster_2.885_14.xyz  cluster_2.885_15.xyz  cluster_2.885_16.xyz  cluster_2.885_4.xyz  cluster_2.885_5.xyz  cluster_2.885_6.xyz  cluster_2.885_7.xyz  cluster_2.885_8.xyz  cluster_2.885_9.xyz
data/cubes/: cube_05.xyz  cube_11.xyz  cube_12.xyz  cube_13.xyz  cube_14.xyz  cube_15.xyz  cube_16.xyz  cube_17.xyz  cube_18.xyz
data/whiskers/: dimensions.txt  whisker1.data  whisker1.xyz  whisker2.data  whisker2.xyz  whisker3.data  whisker3.xyz
results/m4/: lj2_E_1.000_S_1.000_dt_0.001.csv  lj2_E_1.500_S_1.500_dt_0.001.csv  lj2_E_2.000_S_2.000_dt_0.001.csv  lj2_E_2.500_S_2.500_dt_0.001.csv  lj54_0.005.csv  lj54_0.010.csv  lj54_0.015.csv  lj54_0.020.csv  lj54_0.025.csv  lj54_0.030.csv  lj54_0.035.csv
results/m4/images/: details.txt
results/m5/: ljCube_2744.csv  ljCube_3375.csv  ljCube_4096.csv  ljCube_4913.csv  ljCube_5832.csv  ljCube_6859.csv  ljCube_8000.csv  ljCube_9261.csv  ljCubegif_0_512.csv  ljCubegif_2500_512.csv  ljCubegif_5000_512.csv
results/m6/: ljCubeNL_2744.csv  ljCubeNL_3375.csv  ljCubeNL_4096.csv  ljCubeNL_4913.csv  ljCubeNL_5832.csv  ljCubeNL_6859.csv  ljCubeNL_8000.csv  ljCubeNL_9261.csv
results/m7/: gptaCluster-econs_923.csv  gptaCluster-gif_923.csv  gptaCluster_10179.csv  gptaCluster_12431.csv  gptaCluster_1415.csv  gptaCluster_14993.csv  gptaCluster_2057.csv  gptaCluster_2869.csv  gptaCluster_309.csv  gptaCluster_3871.csv  gptaCluster_5083.csv  gptaCluster_561.csv  gptaCluster_6525.csv  gptaCluster_8217.csv  gptaCluster_923.csv
results/m7/images/: details.txt
results/m8/: cluster_parallel_923.csv
results/m9/images/: details.txt
